--- a/senguo.cc/admin/templates/admin/goods-all.html
+++ b/senguo.cc/admin/templates/admin/goods-all.html
@@ -379,6 +379,7 @@
          <div class="picture-library">
            <ul class="group picture-list">
                 <li class="img-bo">
+                    <a href="javascript:;" class="del-pic-img">x</a>
                     <div class="img-selected">已选</div>
                     <img src="" alt="商品图片"/>
                 </li>
