官网头部修改

--- a/senguo.cc/admin/templates/official/base.html
+++ b/senguo.cc/admin/templates/official/base.html
@@ -41,7 +41,7 @@
 						<p class="mt2 font20 text-grey">水果o2o领跑者</p>
 						<p class="font20 text-green">www.senguo.cc</p>
 					</div> -->
-                    <a href="{{reverse_url('OfficialHome')}}"><img src="{{static_url('official_img/logo2.png')}}" class="logo"/></a>
+                    <a href="{{reverse_url('OfficialHome')}}"><img src="{{static_url('official_img/new_logo.png')}}" class="logo"/></a>
 				</div>
 			</div>
 			<div class="senguo-nav font16">
@@ -51,13 +51,14 @@
                     <li class="{{shop_active}}"><a href="{{reverse_url('OfficialShopList')}}">店铺列表</a></li>
 					<li class="{{about_active}}"><a href="{{reverse_url('OfficialAbout')}}">关于我们</a></li>
                     <li class="{{community_active}}"><a href="{{reverse_url('BbsMain')}}" target="_blank">森果社区</a></li>
+                    <li class=""><a href="#">下载APP</a></li>
                     <div class="admin-box">
                         <div class="login-box hidden-xs">
                             <ul class="text-grey header-top" id="header-top">
                                 <!--<li class="loggedout"><a href="#" id="headertop-signup">注册</a></li>
                                 <li class="loggedout"><a href="#" id="headertop-signin" class="text-grey  head-btn border-none  head-btn">登录</a></li>-->
-                                <li><a href="{{reverse_url('switchshop')}}" class="text-black">管理后台</a></li> |
-                                <li><a href="{{reverse_url('ApplyHome')}}" class="text-black">申请接入</a></li>
+                                <li><a href="{{reverse_url('switchshop')}}" class="new-font-color">管理后台</a></li>
+                                <li><a href="{{reverse_url('ApplyHome')}}" class="new-font-color">申请接入</a></li>
                             </ul>
                         </div>
                     </div>
