--- a/senguo.cc/admin/static/css/official_base.css
+++ b/senguo.cc/admin/static/css/official_base.css
@@ -82,6 +82,7 @@ button:focus{outline:0;}
 #warn{position:absolute;padding:5px 20px 5px 0;}
 body{padding-top: 80px;}
 /*---public----*/
+.new-font-color{color:#58d0a6;}
 .text-green{color:#6CCA86;}
 .text-green2{color:#89CEC9;}
 .bg-white{background-color:#fff;}
@@ -121,32 +122,32 @@ a,input,button{ outline:none; }
 ::-moz-focus-inner{border:0;}
 .w1000{max-width:1000px;margin:0 auto;overflow:hidden;}
 .w1200{max-width:1200px;margin:0 auto;}
-.head{height:80px;padding-top:15px;position: fixed;left: 0;top: 0;width: 100%;z-index:999;background-color: #fff;border-bottom: 1px solid #eee;box-shadow: 0 0 3px 1px #ccc;}
-.head li a{color:#adadad;}
+.head{height:76px;position: fixed;left: 0;top: 0;width: 100%;z-index:999;background-color: #fff;border-bottom: 1px solid #eee;box-shadow: 0 0 3px 1px #ccc;}
+.head li a{color:#666;font-size: 18px;}
 
 .login-box{height:14px;margin-right:-5px;}
 .login-box  .open{border:1px solid #fff;}
 .login-box  .headertop-area{width:60px;float:left;}
-.login-box li{width:80px;text-align:center;}
+.login-box li{width:80px;text-align:center;border:1px solid #58d0a6;border-radius: 4px;}
 
 .logo_box p{margin-bottom:0;}
-.logo_box .logo{width:270px;}
+.logo_box .logo{width:151px;margin-top: 9px;}
 .box_sty{width:100%;float:left;}
 
-.nav-box{clear:both;width:100%;height:auto;position: relative;}
-.nav-box .senguo-nav{position: absolute;top: 6px;right: 5px;}
-.nav-box .senguo-nav>ul>li{width:94px;height:40px;line-height:40px;text-align:center;}
-.nav-box .senguo-nav>ul>li>a{line-height:40px;border-radius: 4px;display:block;-webkit-transition:all .3s ease-in-out;}
+.nav-box{clear:both;width:100%;height:76px;position: relative;}
+.nav-box .senguo-nav{position: absolute;left:200px;width: 796px;}
+.nav-box .senguo-nav>ul>li{width:94px;height:76px;text-align:center;float: left;}
+.nav-box .senguo-nav>ul>li>a{line-height:76px;display:block;-webkit-transition:all .3s ease-in-out;}
 .nav-box .senguo-nav>ul>li:hover{}
 .nav-box .senguo-nav>ul>li>a:hover{text-decoration:none;background-color:#6CCA86 !important;color:#fff !important;}
-.nav-box .senguo-nav>ul>li.active a{display:block;background-color:#6CCA86 !important;color:#fff !important;border-radius: 4px;}
+.nav-box .senguo-nav>ul>li.active a{display:block;background-color:#6CCA86 !important;color:#fff !important;}
 .container{min-width:1000px;}
 .footer{position:relative;bottom:0;left:0;width:100%;min-width:1000px;overflow:hidden;margin-top:80px;border-top:1px solid #e7e7eb;line-height:50px;}
-.admin-box{float: right;padding-top: 5px;}
+.admin-box{float: right;margin-top: 20px;}
 
 /*新版官网*/
 .head-btn{display: block;text-align: center;height: 30px;line-height: 30px;border: 1px solid #adadad;border-radius: 2px;-webkit-transition:all .3s ease-in-out;transition:all .3s ease-in-out;}
-.header-top{height: 30px;line-height: 28px;border: 1px solid #222;border-radius: 2px;}
+.header-top{height: 30px;line-height: 28px;}
 .border-none{border: none;}
 .head-btn:hover{color: #333;border-color: #333;text-decoration:none;}
 .border-none:hover{text-decoration:underline;}
