--- a/senguo.cc/admin/static/css/official_home.css
+++ b/senguo.cc/admin/static/css/official_home.css
@@ -1,3 +1,4 @@
+body{padding-top: 0;}
 .slide_box{width:100%;overflow: hidden;position:relative;height:500px;overflow:hidden;text-align: center;}
 .slide_box .slide-ul{position: absolute;height: 500px;overflow: hidden;top: 0;}
 .slide-ul .item{width:100%;position:relative;}
