--- a/senguo.cc/admin/static/css/official_base.css
+++ b/senguo.cc/admin/static/css/official_base.css
@@ -122,7 +122,7 @@ a,input,button{ outline:none; }
 ::-moz-focus-inner{border:0;}
 .w1000{max-width:1000px;margin:0 auto;overflow:hidden;}
 .w1200{max-width:1200px;margin:0 auto;}
-.head{height:76px;position: fixed;left: 0;top: 0;width: 100%;z-index:999;background-color: #fff;border-bottom: 1px solid #eee;box-shadow: 0 0 3px 1px #ccc;}
+.head{height:76px;position: fixed;left: 0;top: 0;width: 100%;z-index:999;background-color: #fff;border-bottom: 1px solid #eee;}
 .head li a{color:#666;font-size: 18px;}
 
 .login-box{height:14px;margin-right:-5px;}
@@ -135,7 +135,7 @@ a,input,button{ outline:none; }
 .box_sty{width:100%;float:left;}
 
 .nav-box{clear:both;width:100%;height:76px;position: relative;}
-.nav-box .senguo-nav{position: absolute;left:200px;width: 796px;}
+.nav-box .senguo-nav{position: absolute;left:200px;width: 795px;}
 .nav-box .senguo-nav>ul>li{width:94px;height:76px;text-align:center;float: left;}
 .nav-box .senguo-nav>ul>li>a{line-height:76px;display:block;-webkit-transition:all .3s ease-in-out;}
 .nav-box .senguo-nav>ul>li:hover{}
