--- a/senguo.cc/admin/templates/bbs/artical-detail.html
+++ b/senguo.cc/admin/templates/bbs/artical-detail.html
@@ -63,7 +63,7 @@
             </div>
         </div>
         <div class="topic-detail box-border mt10">
-            <p class="c333">文章评论(3)</p>
+            <p class="c333">文章评论({{article["comment_num"]}})</p>
             <div class="wrap-textarea mt10">
                 <textarea class="detail-area" placeholder="你怎么看？"></textarea>
             </div>
