--- a/senguo.cc/admin/static/bbs/css/bbs-main.css
+++ b/senguo.cc/admin/static/bbs/css/bbs-main.css
@@ -28,8 +28,8 @@ div,span,p,li{-webkit-user-select:none;}
 .bbs-top{background-color: #48b6a4;height: 60px;}
 .wrap-userinfo{height: 60px;line-height: 60px;position: relative;right: -20px;}
 .wrap-userinfo:hover .wrap-user-pro{display: block;}
-.wrap-userinfo>a{display: block;height: 60px;padding: 0 20px;}
-.wrap-userinfo>a:hover{background-color: #46B19E;}
+.wrap-userinfo>div{display: block;height: 60px;padding: 0 20px;}
+.wrap-userinfo>div:hover{background-color: #46B19E;}
 .wrap-userinfo img{border: 1px solid #fff;border-radius: 50%;width: 38px;height: 38px;}
 .name-text{font-size: 14px;color: #fff;}
 .logo-sg{display: inline-block;width: 178px;height: 49px;background: url("../img/logo.png") no-repeat;position: relative;top: 6px;vertical-align: middle;}
@@ -82,6 +82,7 @@ div,span,p,li{-webkit-user-select:none;}
 .icon_sc{background-position: 0 -44px;}
 .icon_draft{background-position: 0 -70px;}
 .post-cont img{max-width: 100% !important;}
+.go-login{border: 1px solid #fff;border-radius: 4px; width: 60px;height: 28px;line-height: 28px;display: inline-block;text-align: center;color: #fff;font-size: 14px;}
 /*底部*/
 .foot{padding: 24px 0;color: #f1f1f1;text-align: center;background-color: #b8b9b9;font-size: 12px;margin-top: 60px;}
 .links_item {display: inline-block;vertical-align: middle;padding: 0 1em;line-height: 1em;border-left: 1px solid #d9dadc;}
@@ -162,7 +163,7 @@ div,span,p,li{-webkit-user-select:none;}
 .great{background-position: 0 -74px;}
 .store-active{background-position: 0 -145px;}
 .store{background-position: 0 -220px;}
-.share-box{position: absolute;right: 0;height: 41px;line-height:41px;top: 10px;}
+.share-box{position: absolute;right: 0;height: 41px;line-height:41px;top: 28px;}
 .share-wx{display: inline-block;width: 41px;height: 41px;background: url('../img/bbs_share.png');background-position: 0 0;position: relative;}
 .share-wx:hover .wrap-share-code{display: block;}
 .wrap-share-code{position: absolute;left: -50px;top: -140px;background-color: #fff;width: 300px;display: none;}
