--- a/senguo.cc/admin/templates/bbs/artical-detail.html
+++ b/senguo.cc/admin/templates/bbs/artical-detail.html
@@ -90,7 +90,6 @@
         </div>
     </div>
 </div>
-        {% set ss = <>%}
 <div class="pop-win pop-login hide" data-id="{{if_login}}">
     <div class="pop-content">
         <div class="login-box">
@@ -100,7 +99,7 @@
                 {% if handler.is_wexin_browser() %}
                 <a href="{{handler.get_weixin_login_url()}}" class="btn">登录</a>
                 {% else %}
-                <a href="{{reverse_url('customerLogin')}}?next="window.location.href"" class="btn">登录</a>
+                <a href="{{reverse_url('customerLogin')}}?next=bbs" class="btn">登录</a>
                 {% end %}
             </div>
         </div>
